# SleeperMark-fork

./: .gitignore  README.md  main.py  pyproject.toml
Stage1/: eval.py  generate_custom_watermark.py  model.py  train.py  train.sh  utils.py
Stage2/: dm_finetune.py  eval.py  prepare_data.py  train.sh  unet_attention_UpAndMid_keys.json  utils.py
Stage3/: diff_check.py  download_dataset.py  eval.py  run.sh
