[project]
name = "sleepermark-fork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "diffusers>=0.37.1",
    "httpx[socks]>=0.28.1",
    "kornia>=0.8.2",
    "lpips>=0.1.4",
    "pandas>=3.0.3",
    "peft>=0.19.1",
    "scikit-image>=0.26.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.6.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

